# rlvr-summary

./: .gitignore  .pre-commit-config.yaml  FENICE_CACHING.md  FENICE_OPTIMIZATION_PLAN.md  README.md  REWARD_SYSTEM.md  SETUP_COMPLETE.md  TRL_IMPLEMENTATION_SUMMARY.md  create_issues.sh  demo_caching.py  demo_fix_success.py  demo_integration.py  demo_pipeline.py  demo_rewards.py  demo_simplified_weights.py  demo_training_implementation.py  demo_trl_integration.py  demo_verl_integration.py  example_tokenizer_config.py  github_issues.md  issue_creation_order.md  plan.md  pyproject.toml  quick_issues.md  requirements-conda.txt  requirements-dev.txt  requirements.txt  test_bart_mnli_integration.py  test_bertscore.py  test_caching_logic.py  test_fenice_cache.py  test_fenice_fix.py  test_fenice_integration.py  test_format_conversion.py  test_integration.py  verify_fenice_fix.py
.github/instructions/: general.instructions.md
configs/: config.yaml  verl_ppo_config.yaml
configs/data/: cnn_dailymail.yaml
configs/evaluation/: default.yaml
configs/experiment/: default.yaml
configs/hydra/: default.yaml
configs/model/: distilgpt2.yaml  llama_3_1b.yaml
configs/rewards/: balanced_fenice.yaml  combined_fenice.yaml  conservative_fenice.yaml  fenice_focused.yaml  rule_bundle.yaml
configs/training/: ppo_baseline.yaml
data/verl/: data_summary.yaml
demo_output/: pipeline_output.jsonl  sample_cnn_dm.jsonl
docs/: FENICE_INTEGRATION.md  FENICE_MODEL_OPTIMIZATION.md  FENICE_SUMMARY.md
scripts/: demo_fenice.py  prepare_data_verl.py  setup.py  test_wandb.py  train.py  train.sh  train_3090.sh  train_fenice.sh  train_simple.py  train_verl.py
src/rlvr_summary/: __init__.py  cli.py
src/rlvr_summary/data/: README.md  __init__.py  annotations.py  batch_processor.py  loaders.py  preprocessors.py  simple_loader.py  validators.py
src/rlvr_summary/evaluation/: __init__.py  rouge.py
src/rlvr_summary/fenice/: FENICE.py  __init__.py  model_manager.py
src/rlvr_summary/fenice/claim_extractor/: __init__.py  claim_extractor.py
src/rlvr_summary/fenice/coreference_resolution/: __init__.py  coreference_resolution.py
src/rlvr_summary/fenice/nli/: __init__.py  nli_aligner.py
src/rlvr_summary/fenice/utils/: __init__.py  utils.py
src/rlvr_summary/models/: __init__.py  base.py
src/rlvr_summary/rewards/: __init__.py  bart_mnli.py  base.py  bertscore.py  combined.py  fenice.py  integration.py  rule_bundle.py  rules.py  verl_reward.py
src/rlvr_summary/tools/: __init__.py
src/rlvr_summary/training/: __init__.py  ppo_trainer.py
src/rlvr_summary/utils/: __init__.py  common.py  config.py  wandb_logger.py
tests/: __init__.py  test_bart_mnli.py  test_caching_logic.py  test_config_path_fix.py  test_data_pipeline.py  test_fenice.py  test_fenice_cache.py  test_integration.py  test_rewards.py  test_setup.py  test_tokenizer_config.py  test_training.py  test_training_script.py  test_trl_integration.py  test_verl_integration.py
